--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ color: rgb(128, 0, 32);
 
 .articles{
   display: grid;
- grid-template-columns: repeat(4, 1fr); /* 固定 4 欄 */
+ grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* 固定 4 欄 */
   gap: 20px;
   text-align: left;
 }
